// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el componente ProductCard Debe de incrementar el contador 1`] = `
<section
  className="productCard undefined"
>
  <h2>
    ProductCard
  </h2>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  />
</section>
`;

exports[`Pruebas en el componente ProductCard Debe de mostrar el componente correctamente 1`] = `
<section
  className="productCard undefined"
>
  <h2>
    Product Card
  </h2>
</section>
`;
